@@ -1,0 +1,8 @@
+<h1>BTS </h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gdZLi9oWNZg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>BTS成員Suga因酒後駕駛電動滑板車被首爾西部地方法院判罰款15萬韓元（約港幣8.7萬元）。法官李裕燮在星期五作出這一判決，這是一個簡易判決，即由法官在沒有進行完整審判的情況下作出的法律決定，通常適用於相對較輕微的案件，以便更快地解決。這個罰款金額與檢察官此前要求的金額相同。</p>
+<p>Suga有權在法院作出判決後七天內要求進行正式審判，如果他不同意這一判決。Suga的真名是閔玧其，他在8月6日晚上11時15分在漢南洞（Hannam-dong）附近駕駛電動滑板車時被警方抓獲，當時他的血液酒精濃度為0.227%，遠超出吊銷駕照的0.08%門檻。</p>
+<p>事發17天後，Suga出現在龍山警察局（Yongsan Police Station），接受了三個小時的審訊，並承認了罪行。警方後來將案件移交給首爾西部地方檢察廳（Seoul Western District Prosecutor’s Office），沒有進行拘留。</p>
+<p>Suga目前正在履行社會服務代理人的職責，這是韓國義務兵役的一種替代形式。8月25日，Suga通過위버스（Weverse）平台向BTS成員和粉絲發表了手寫道歉信。“我對於給我的團隊和成員造成傷害感到非常抱歉和痛苦，”他寫道。“我向一直給我更多愛的粉絲道歉，”Suga說，並表示他一直在深刻反思自己的行為。</p>
